# backtest

./: .gitignore  README.md  pyproject.toml
backtest/: __init__.py  backend_data.json  main.py  marketdata.py  strategy.py
backtest/tests/: test_marketdata.py  test_strategy.py
backtest_module/: __init__.py  backtest_config.py  marketdata.py  strategy.py
tests/: test_marketdata.py
