[tool.poetry]
name = "backtest"
version = "0.1.0"
description = "A backtesting engine in Python"
authors = ["Christakou <christiano.christakou@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = ">=1.0"
pandas = "*"
matplotlib = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
